[package]
name = "rclone-crypt"
description = "A Rust binding for rclone-crypt to allow for file operations on encrypted files"
version = "0.1.3"
authors = ["Tyler Blair <tyler@viru.ca>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/Hidendra/rclone-crypt-rs"

[dependencies]
anyhow = "1.0.27"
sodiumoxide = "0.2.5"
base64 = "0.13.0"
base32 = "0.4.0"
scrypt = "0.8.0"
arrayref = "0.3.6"
openssl = "0.10.29"
data-encoding = "2.2.0"
block-modes = "0.8.1"
aes = { version = "0.7.5", features = ["ctr"] }
cipher = "0.3.0"
